# agentic-quantitative-framework

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LOCAL_DEV_SETUP.md  Makefile  Quant Ai Strategy Design.md  README.md  config.yaml  prefect.yaml  pyproject.toml
.devcontainer/: EXTENSIONS.md  README.md  SCRIPTS.md  devcontainer.json
.devcontainer/scripts/: ensure-prefect-env.sh  install-aider-cli.sh  install-claude-code-cli.sh  install-codex-cli.sh  install-gemini-cli.sh  install-goose-cli.sh  install-plandex-cli.sh  install-prefect-cli.sh  install-supabase-cli.sh  post-create.sh  post-start.sh  sync-supabase-env.mjs  verify-prefect-setup.sh
.github/: funding.yaml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml  task.yaml
.github/workflows/: README.md  ci-validate-embeddings.yml  ci-validate-prefect.yml  ci.yml  codex-autofix.yml  docs-deploy.yaml  docs.yml  monthly-template-refresh.yml  publish-template-release.yml
agents/: __init__.py  gpt_feature_agent.py  langgraph_chain.py  state.py  tools.py
agents/tools/: __init__.py
alerts/: insider_nvda.py
backtest/: __init__.py  engine.py
backtests/: README.md
config/: README.md
configs/: watchlist.yaml
docs/: README.md  agents.md  architecture.md  backtesting.md  deployment.md  docusaurus.config.ts  intro.md  overview.md  package.json  sidebars.ts  sponsorship.md
docs/adr/: 20251017-provenance-events.md  20251017-signal-embeddings-keys.md
docs/adrs/: readme.md
docs/architecture/: observability_opentelemetry_architecture.md  quant_ai_strategy_design.md
docs/capabilities/: backtest.md  change-points.md  deeplob.md  fingerprints.md  finra.md  hawkes.md  matrix-profile.md  microstructure.md  minirocket.md  prefect.md  provenance.md  schema.md  sec-form4.md  similarity.md  vendor-markets.md  vpin.md
docs/prompts/: initial-prompt.md  prompt.0.md  prompt.1.md  prompt.2.md  prompt.4.md  prompt.5.md  prompt.6.md  prompt.7.md  prompt.8.md  prompts.3.md
docs/research/: quant_ai_strategy_design.md
docs/runbooks/: nvda_insider_monitor.md
docs/setup/: local_dev.md
docs/specs/: FEATURE_CONTRACTS.md
docs/use-cases/: insider_trading.md
docs/use_cases/: README.md  (+1 more)
features/: __init__.py  change_points.py  deeplob_embeddings.py  generate_ts2vec_embeddings.py  hawkes_features.py  hmm_change_points.py  insider_helpers.py  matrix_profile.py  microstructure.py  minirocket_embeddings.py  pca_fingerprint.py  price_trend.py  tda_persistence.py  vpin.py
flows/: __init__.py  backtest.py  backtest_flow.py  compute_intraday_features.py  compute_offexchange_features.py  embedding_flow.py  embeddings_and_fingerprints.py  ingest_sec_form4.py  monitor_nvda_insider.py  prune_flow.py  similarity_scans.py
framework/: __init__.py  alerts.py  config.py  finra_client.py  provenance.py  sec_client.py  sec_parse.py  supabase_client.py  vendor_markets.py
monitoring/: __init__.py  drift_monitor.py
observability/: __init__.py  otel.py
otelcol/: config.yaml
prompts/: sec_form4_path_a_verification.md
scripts/: audit_vector_dims.py
sql/: seed_vector.sql
supabase/: config.toml  seed.sql
tests/: __init__.py  conftest.py  test_planner.py
use_cases/: README.md  __init__.py  base.py  reademe.md
utils/: __init__.py  config.py  guards.py  symbols.py
vector_db/: README.md  embeddings.py
(+110 files in other folders)
